# SLAMBOX-SDK

./: .clang-format  .ducker.yaml  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  DoxygenLayout.xml  README.md  flexxlam_sdkConfig.cmake.in  generate_doxygen.sh  run_check.sh  slambox_sdkConfig.cmake.in
.github/workflows/: docker-build-test.yaml  static.yml
docker/: Dockerfile  Dockerfile.aarch64
docs/: hardware.md  index.md
docs/custom_style/: custom.css  custom_footer.html  custom_header.html
docs/doxygen-awesome-css/: README.md
docs/examples/ardupilot/: ardupilot_example.md
docs/examples/px4/: px4_example.md
docs/examples/turtlebot/: turtlebot3_example.md
docs/examples/turtlebot/config/: rviz.rviz
docs/getting_started/: communication_setup.md  firmware_update.md  flexxlam_setting.md  hardware_overview.md  lidar_setting.md  serial_setting.md  slambox_setting.md  tutorial.md
examples/: README.md
examples/client/: CMakeLists.txt  README.md  compile_commands.json  flexxlam_client_example.cpp  flexxlam_client_example_app.cpp  slambox_client_example.cpp  slambox_client_example_app.cpp
examples/client/include/: flexxlam_client_example.hpp  slambox_client_example.hpp
examples/config_cli/: CMakeLists.txt  README.md  config_cli.cpp  config_cli_app.cpp
examples/config_cli/include/: config_cli_app.hpp
examples/serial_communication/: CMakeLists.txt  README.md  compile_commands.json  slambox_serial_communication_example.cpp
examples/udp_communication/: CMakeLists.txt  slambox_udp_communication_example.cpp
html/: ArdupilotExample.html  Hardware.html  LiDARSetting.html  Odometry_8cpp_source.html  Odometry_8hpp_source.html  PX4Example.html  PointCloud2_8cpp_source.html  PointCloud2_8hpp_source.html  TurtleBotExample.html  acknowledge__protocol_8hpp_source.html  annotated.html  annotated_dup.js  base__protocol_8cpp_source.html  base__protocol_8hpp_source.html  classes.html  classflexxlam_1_1AcknowledgeProtocol-members.html  classflexxlam_1_1AcknowledgeProtocol.html  classflexxlam_1_1AcknowledgeProtocol.js  classflexxlam_1_1AcknowledgeProtocol__coll__graph.map  classflexxlam_1_1AcknowledgeProtocol__coll__graph.md5  classflexxlam_1_1AcknowledgeProtocol__inherit__graph.map  classflexxlam_1_1AcknowledgeProtocol__inherit__graph.md5  classflexxlam_1_1AcknowledgeProtocol_a38032130c8306234252735a0406acf65_icgraph.map  classflexxlam_1_1AcknowledgeProtocol_a38032130c8306234252735a0406acf65_icgraph.md5  classflexxlam_1_1AcknowledgeProtocol_aab91f7fb80faf35d1c825b694224b2b3_icgraph.map  classflexxlam_1_1AcknowledgeProtocol_aab91f7fb80faf35d1c825b694224b2b3_icgraph.md5  classflexxlam_1_1AcknowledgeProtocol_afccebbd71574257cefcd182d438c89c5_cgraph.map  classflexxlam_1_1AcknowledgeProtocol_afccebbd71574257cefcd182d438c89c5_cgraph.md5  classflexxlam_1_1BaseProtocol-members.html  classflexxlam_1_1BaseProtocol.html  classflexxlam_1_1BaseProtocol.js  classflexxlam_1_1BaseProtocol__coll__graph.map  classflexxlam_1_1BaseProtocol__coll__graph.md5  classflexxlam_1_1BaseProtocol__inherit__graph.map  classflexxlam_1_1BaseProtocol__inherit__graph.md5  classflexxlam_1_1BaseProtocol_a1572edb32a2d5adc643a86295835e2b9_cgraph.map  classflexxlam_1_1BaseProtocol_a1572edb32a2d5adc643a86295835e2b9_cgraph.md5  classflexxlam_1_1BaseProtocol_a1572edb32a2d5adc643a86295835e2b9_icgraph.map  classflexxlam_1_1BaseProtocol_a1572edb32a2d5adc643a86295835e2b9_icgraph.md5  classflexxlam_1_1BaseProtocol_a38447cf7f8d44a513e18010adb8b24ac_icgraph.map  (+534 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  (+42 more)
include/communication/: flexxlam_parser.hpp  serial_communication.hpp
include/flexxlam_msgs/: Odometry.hpp
include/protocol/: base_protocol.hpp
include/protocol/acknowledge/: acknowledge_protocol.hpp  ping_protocol.hpp
include/protocol/command/: command_save_pcd_protocol.hpp
include/protocol/push/: push_odometry_protocol.hpp  push_pointcloud_protocol.hpp
include/protocol/request/: request_ethernet_communication_config.hpp  request_lidar_config.hpp  request_mavlink_communication_config.hpp  request_serial_communication_config.hpp
include/protocol/response/: response_ethernet_communication_config.hpp  response_lidar_config.hpp  response_mavlink_communication_config.hpp  response_serial_communication_config.hpp
include/protocol/set/: set_ethernet_communication_config.hpp  set_lidar_config.hpp  set_mavlink_communication_config.hpp  set_serial_communication_config.hpp
include/sbox/communication/: flexxlam_parser.hpp  sbox_parser.hpp  serial_communication.hpp  slambox_parser.hpp  udp_communication.hpp
include/sbox/flexxlam_msgs/: Odometry.hpp  PointCloud2.hpp
include/sbox/protocol/: base_protocol.hpp
include/sbox/protocol/acknowledge/: acknowledge_protocol.hpp  ping_protocol.hpp
include/sbox/protocol/command/: command_save_pcd_protocol.hpp
include/sbox/protocol/push/: push_odometry_protocol.hpp  push_pointcloud_protocol.hpp
include/sbox/protocol/request/: request_ethernet_communication_config.hpp  (+3 more)
include/sbox/sbox_msgs/: Odometry.hpp  PointCloud2.hpp
include/sbox/utils/: compress_bytes.hpp  to_bytes.hpp
include/utils/: compress_bytes.hpp  to_bytes.hpp
src/communication/: flexxlam_parser.cpp  sbox_parser.cpp  serial_communication.cpp  slambox_parser.cpp  udp_communication.cpp
src/flexxlam_msgs/: Odometry.cpp  PointCloud2.cpp
src/protocol/: base_protocol.cpp
src/sbox_msgs/: Odometry.cpp  PointCloud2.cpp
src/utils/: compress_bytes.cpp  to_bytes.cpp
tests/: test_compress_bytes.cpp  test_flexxlam_parser.cpp  test_push_odometry_protocol.cpp  test_push_pointcloud_protocol.cpp  test_sbox_parser.cpp  test_to_bytes.cpp
(+8 files in other folders)
